server/assets/docs/css/components/overview.css
/* ... */
/* Responsive */
@media (max-width: 1024px) {
  #docs-page-layout:has(#docs-overview) #docs-layout {
    grid-template-columns: 1fr;
  }

  #docs-overview {
    & [data-part="hero-cards"] {
      flex-direction: column;
    }

    & [data-part="hero-card"] {
      height: auto;
    }

    & [data-part="feature-cards"] {
      flex-direction: column;
    }

    & [data-part="feature-card"],
    & [data-part="feature-card"]:link,
    & [data-part="feature-card"]:visited {
      width: 100%;
    }

    & [data-part="video-cards"] {
      flex-direction: column;
    }

    & [data-part="video-card"],
    & [data-part="video-card"]:link,
    & [data-part="video-card"]:visited {
      width: 100%;
    }

    & [data-part="community-card"],
    & [data-part="community-card"]:link,
    & [data-part="community-card"]:visited {
      width: 100%;
    }

    & [data-part="community-cards"] {
      grid-template-columns: 1fr;
    }
  }
}

